# drone_tracking

./: .gitignore  README.md  aruco-world.sdf  single_drone_sim.bash
camera_calibration/: calibration.py  find_board.py  openmv_snapshot.py
docs/: gazebo_simulation.md
px4_files/: aruco-world.world  iris.sdf.jinja  sitl_multiple_run.sh
src/drone_tracker/: CMakeLists.txt  package.xml
src/drone_tracker/launch/: multi_tracker_simulation.launch.py  test_flocking_fake_est.launch.py  test_flocking_no_est.launch.py  test_multi_openmv_static.launch.py  test_multi_openmv_vicon.launch.py  test_openmv.launch.py  test_single_real_drone.launch.py  tracker_simulation.launch.py  tracker_simulation_2.launch.py
src/drone_tracker/src/: EASN_estimation.cpp  EASN_estimation_2.cpp  aruco_pose_est.cpp  camera.cpp  gazebo_camera_driver.cpp  open_mv_camera.cpp  pilot.cpp  pilot.hpp  tracker.cpp  vehicle.cpp  vehicle.hpp
src/drone_tracker_1/: package.xml  setup.cfg  setup.py
src/drone_tracker_1/drone_tracker/: Pilot.py  Vehicle.py  tracker.py
src/drone_tracker_py/: package.xml  setup.cfg  setup.py
src/drone_tracker_py/drone_tracker_py/: CameraSim.py  CameraTransform.py  Pilot.py  Vehicle.py  mocap_node_classic.py  tracker.py
src/drone_tracker_py/launch/: tracker_simulation.launch.py  tracker_simulation.py
src/drone_tracker_py/mocap_gazebo/: mocap_node_classic.py
src/estimation/: offboard_node0.cpp  target_node.cpp
src/gazebo_mocap/: package.xml  setup.cfg  setup.py
src/gazebo_mocap/gazebo_mocap/: mocap.py
src/px4_msgs/msg/: ApriltagMarker.msg
src/serial_cam/: package.xml  setup.cfg  setup.py
src/serial_cam/serial_cam/: serial_cam.py
